# onnx-executor

./: .gitignore  CMakeLists.txt  README.md  dockerfile
.circleci/: config.yml
example_models/: model.onnx
proto/: onnx.proto
src/: executorExceptions.h  expression.cpp  expression.h  main.cpp  operation.cpp  operation.h
tests/: main.cpp  tests.cpp
